Aplicado de DOM, localStorage y JSON, permitiendo interactuar al usuario con iniciado de sesion, agregado al carrito y compra, mediante inputs y buttons con eventos

--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
     <header>
         <img src="./assets/Logo_Azul.png" alt="">
         <p>¡Hacemos envios a todo el país - Ofrecemos hasta 3 cuotas sin interes!</p>
-    </header>
-
-    <main>
         <img class="portada" src="./assets/Portada.png" alt="">
         <nav class="navbar1">
             <ul>
@@ -20,40 +17,48 @@
                     <img src="./assets/home.png" alt="">
                     <a href="https://bonya29.github.io/49695-Proyecto_Desarrollo_Web_Coderhouse-Berardost/">Pagina principal - Nuestra Empresa</a>
                 </li>
+                <li class="home2">
+                    <img src="./assets/market.png" alt="">
+                    <a href="#">Inicio Tienda</a>
+                </li>
                 <li class="search">
                     <input type="search" placeholder="¿Buscas algo en particular?">
                     <img src="./assets/search.png" alt="">
                 </li>
                 <li class="login">
                     <img src="./assets/login.png" alt="">
-                    <a href="">Iniciar Sesión</a>
+                    <a href="./pages/login.html">Iniciar Sesión</a>
                 </li>
                 <li class="favorite">
                     <img src="./assets/favorite.png" alt="">
-                    <a href="">Favoritos</a>
+                    <a href="./pages/favoritos.html">Favoritos</a>
                 </li>
                 <li class="cart">
                     <img src="./assets/cart.png" alt="">
-                    <a href="">Carrito</a>
+                    <a href="./pages/cart.html">Carrito</a>
                 </li>
             </ul>
         </nav>
         <nav class="navbar2">
             <ul>
-                <li><a href="">Teclados</a></li>
-                <li><a href="">Mouses</a></li>
-                <li><a href="">Auriculares</a></li>
-                <li><a href="">Monitores</a></li>
-                <li><a href="">RAM</a></li>
-                <li><a href="">Almacenamiento</a></li>
-                <li><a href="">Graficas</a></li>
-                <li><a href="">Motherboards</a></li>
-                <li><a href="">Procesadores</a></li>
+                <li><a href="./pages/teclados.html">Teclados</a></li>
+                <li><a href="./pages/mouses.html">Mouses</a></li>
+                <li><a href="./pages/auriculares.html">Auriculares</a></li>
+                <li><a href="./pages/monitores.html">Monitores</a></li>
+                <li><a href="./pages/ram.html">RAM</a></li>
+                <li><a href="./pages/almacenamiento.html">Almacenamiento</a></li>
+                <li><a href="./pages/graficas.html">Graficas</a></li>
+                <li><a href="./pages/motherboards.html">Motherboards</a></li>
+                <li><a href="./pages/procesadores.html">Procesadores</a></li>
             </ul>
         </nav>
-        <section>
-            <h1>¡Proximamente!</h1>
-        </section>
+    </header>
+
+    <main>
+        <div>
+            <h1>Nuestros Productos</h1>
+        </div>
+        <section id="prod-cont" class="prod"></section>
     </main>
 
     <footer>
@@ -88,6 +93,6 @@
         </section>
     </footer>
     <script src="./js/productos.js"></script>
-    <script src="./js/script.js"></script>
+    <script src="./js/script_gral.js"></script>
 </body>
 </html>
