--- a/pages/mouses.html
+++ b/pages/mouses.html
@@ -3,23 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="mouse, periferico, gamer, redragon, corsair, logitech">
+    <meta name="author" content="Benjamin Berardo Mazzalay">
+    <meta name="copyright" content="Berardo S.A.S">
     <title>Berardost - Mouses</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inria+Sans:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="../assets/Logo.ico" type="image/x-icon">
     <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
     <header>
         <img src="../assets/Logo_Azul.png" alt="">
-        <p>¡Hacemos envios a todo el país - Ofrecemos hasta 3 cuotas sin interes!</p>
+        <p>¡Hacemos envíos a todo el país!</p>
         <img class="portada" src="../assets/Portada.png" alt="">
         <nav class="navbar1">
             <ul>
                 <li class="home">
                     <img src="../assets/home.png" alt="">
-                    <a href="https://bonya29.github.io/49695-Proyecto_Desarrollo_Web_Coderhouse-Berardost/">Pagina principal - Nuestra Empresa</a>
+                    <a href="https://berardost.netlify.app/" target="_blank">Conoce Nuestra Empresa</a>
                 </li>
                 <li class="home2">
                     <img src="../assets/market.png" alt="">
-                    <a href="../index.html">Inicio Tienda</a>
+                    <a href="../index.html">Inicio</a>
                 </li>
                 <li class="search">
                     <input type="search" placeholder="¿Buscas algo en particular?">
@@ -27,7 +34,7 @@
                 </li>
                 <li class="login">
                     <img src="../assets/login.png" alt="">
-                    <a href="../pages/login.html">Iniciar Sesión</a>
+                    <a href="login.html">Iniciar/Cerrar Sesión</a>
                 </li>
                 <li class="favorite">
                     <img src="../assets/favorite.png" alt="">
