Añadido de funcionalidades a los botones de carrito y favoritos, añadido de mas validaciones para los inputs, añadido de control de iniciado de sesión para realizar compra

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </li>
                 <li class="home2">
                     <img src="./assets/market.png" alt="">
-                    <a href="#">Inicio</a>
+                    <a href="#" style="text-decoration: underline;">Inicio</a>
                 </li>
                 <li class="search">
                     <input type="search" placeholder="¿Buscas algo en particular?">
