--- a/pages/almacenamiento.html
+++ b/pages/almacenamiento.html
@@ -53,7 +53,7 @@
                 <li><a href="auriculares.html">Auriculares</a></li>
                 <li><a href="monitores.html">Monitores</a></li>
                 <li><a href="ram.html">RAM</a></li>
-                <li><a href="#">Almacenamiento</a></li>
+                <li><a href="#" style="text-decoration: underline;">Almacenamiento</a></li>
                 <li><a href="graficas.html">Graficas</a></li>
                 <li><a href="motherboards.html">Motherboards</a></li>
                 <li><a href="procesadores.html">Procesadores</a></li>
