--- a/pages/cart.html
+++ b/pages/cart.html
@@ -39,7 +39,7 @@
                 </li>
                 <li class="cart">
                     <img src="../assets/cart.png" alt="">
-                    <a href="cart.html">Carrito</a>
+                    <a href="#" style="text-decoration: underline;">Carrito</a>
                 </li>
             </ul>
         </nav>
@@ -57,17 +57,17 @@
         <div id="total" class="total"></div>
         <div class="envio">
             <h4>Información de Envio</h4>
-            <input id="prov" type="text" placeholder="Provincia">
-            <input id="ciu" type="text" placeholder="Ciudad">
-            <input id="cp" type="number" placeholder="Codigo Postal">
-            <input id="dir" type="text" placeholder="Calle y Numero">
+            <input id="prov" type="text" placeholder="Provincia*">
+            <input id="ciu" type="text" placeholder="Ciudad*">
+            <input id="dir" type="text" placeholder="Calle y Numero*">
+            <input id="cp" type="number" placeholder="Codigo Postal*">
         </div>
         <div class="pago">
             <h4>Metodo de Pago</h4>
-            <input id="tit" type="text" placeholder="Titular de la Tarjeta">
-            <input id="num" type="number" placeholder="Numero de la Tarjeta">
-            <input id="exp" type="number" placeholder="Fecha de Expiración">
-            <input id="ccv" type="number" placeholder="CCV">
+            <input id="tit" type="text" placeholder="Titular de la Tarjeta*">
+            <input id="num" type="number" placeholder="Numero de la Tarjeta*">
+            <input id="exp" type="number" placeholder="Fecha de Vencimiento* (xx-xx)">
+            <input id="ccv" type="number" placeholder="CCV*">
         </div>
         <div class="destinatario">
             <h4>Datos del Destinatario (Opcional)</h4>
