--- a/pages/favoritos.html
+++ b/pages/favoritos.html
@@ -35,7 +35,7 @@
                 </li>
                 <li class="favorite">
                     <img src="../assets/favorite.png" alt="">
-                    <a href="favoritos.html">Favoritos</a>
+                    <a href="#" style="text-decoration: underline;">Favoritos</a>
                 </li>
                 <li class="cart">
                     <img src="../assets/cart.png" alt="">
@@ -55,7 +55,7 @@
     </main>
 
     <footer>
-        <section class="foot" style="position: fixed; bottom: 0;">
+        <section class="foot">
             <div class="seguinos">
                 <p>Seguinos en Nuestras Redes</p>
                 <div class="fc">
