--- a/pages/graficas.html
+++ b/pages/graficas.html
@@ -54,7 +54,7 @@
                 <li><a href="monitores.html">Monitores</a></li>
                 <li><a href="ram.html">RAM</a></li>
                 <li><a href="almacenamiento.html">Almacenamiento</a></li>
-                <li><a href="#">Graficas</a></li>
+                <li><a href="#" style="text-decoration: underline;">Graficas</a></li>
                 <li><a href="motherboards.html">Motherboards</a></li>
                 <li><a href="procesadores.html">Procesadores</a></li>
             </ul>
