--- a/pages/login.html
+++ b/pages/login.html
@@ -31,7 +31,7 @@
                 </li>
                 <li class="login">
                     <img src="../assets/login.png" alt="">
-                    <a href="login.html">Iniciar/Cerrar Sesión</a>
+                    <a href="#" style="text-decoration: underline;">Iniciar/Cerrar Sesión</a>
                 </li>
                 <li class="favorite">
                     <img src="../assets/favorite.png" alt="">
