--- a/pages/monitores.html
+++ b/pages/monitores.html
@@ -51,7 +51,7 @@
                 <li><a href="teclados.html">Teclados</a></li>
                 <li><a href="mouses.html">Mouses</a></li>
                 <li><a href="auriculares.html">Auriculares</a></li>
-                <li><a href="#">Monitores</a></li>
+                <li><a href="#" style="text-decoration: underline;">Monitores</a></li>
                 <li><a href="ram.html">RAM</a></li>
                 <li><a href="almacenamiento.html">Almacenamiento</a></li>
                 <li><a href="graficas.html">Graficas</a></li>
