--- a/pages/motherboards.html
+++ b/pages/motherboards.html
@@ -55,7 +55,7 @@
                 <li><a href="ram.html">RAM</a></li>
                 <li><a href="almacenamiento.html">Almacenamiento</a></li>
                 <li><a href="graficas.html">Graficas</a></li>
-                <li><a href="#">Motherboards</a></li>
+                <li><a href="#" style="text-decoration: underline;">Motherboards</a></li>
                 <li><a href="procesadores.html">Procesadores</a></li>
             </ul>
         </nav>
