--- a/pages/mouses.html
+++ b/pages/mouses.html
@@ -49,7 +49,7 @@
         <nav class="navbar2">
             <ul>
                 <li><a href="teclados.html">Teclados</a></li>
-                <li><a href="#">Mouses</a></li>
+                <li><a href="#" style="text-decoration: underline;">Mouses</a></li>
                 <li><a href="auriculares.html">Auriculares</a></li>
                 <li><a href="monitores.html">Monitores</a></li>
                 <li><a href="ram.html">RAM</a></li>
