--- a/pages/procesadores.html
+++ b/pages/procesadores.html
@@ -56,7 +56,7 @@
                 <li><a href="almacenamiento.html">Almacenamiento</a></li>
                 <li><a href="graficas.html">Graficas</a></li>
                 <li><a href="motherboards.html">Motherboards</a></li>
-                <li><a href="#">Procesadores</a></li>
+                <li><a href="#" style="text-decoration: underline;">Procesadores</a></li>
             </ul>
         </nav>
     </header>
