--- a/pages/teclados.html
+++ b/pages/teclados.html
@@ -48,7 +48,7 @@
         </nav>
         <nav class="navbar2">
             <ul>
-                <li><a href="#">Teclados</a></li>
+                <li><a href="#" style="text-decoration: underline;">Teclados</a></li>
                 <li><a href="mouses.html">Mouses</a></li>
                 <li><a href="auriculares.html">Auriculares</a></li>
                 <li><a href="monitores.html">Monitores</a></li>
