--- a/pages/auriculares.html
+++ b/pages/auriculares.html
@@ -50,7 +50,7 @@
             <ul>
                 <li><a href="teclados.html">Teclados</a></li>
                 <li><a href="mouses.html">Mouses</a></li>
-                <li><a href="#">Auriculares</a></li>
+                <li><a href="#" style="text-decoration: underline;">Auriculares</a></li>
                 <li><a href="monitores.html">Monitores</a></li>
                 <li><a href="ram.html">RAM</a></li>
                 <li><a href="almacenamiento.html">Almacenamiento</a></li>
