--- a/pages/ram.html
+++ b/pages/ram.html
@@ -52,7 +52,7 @@
                 <li><a href="mouses.html">Mouses</a></li>
                 <li><a href="auriculares.html">Auriculares</a></li>
                 <li><a href="monitores.html">Monitores</a></li>
-                <li><a href="#">RAM</a></li>
+                <li><a href="#" style="text-decoration: underline;">RAM</a></li>
                 <li><a href="almacenamiento.html">Almacenamiento</a></li>
                 <li><a href="graficas.html">Graficas</a></li>
                 <li><a href="motherboards.html">Motherboards</a></li>
