--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inria+Sans:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="./assets/Logo.ico" type="image/x-icon">
     <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 </head>
 <body>
     <header>
@@ -102,5 +103,6 @@
     </footer>
     <script src="./js/productos.js"></script>
     <script src="./js/script_gral.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 </body>
 </html>
