--- a/pages/login.html
+++ b/pages/login.html
@@ -94,5 +94,6 @@
         </section>
     </footer>
     <script src="../js/login.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
