Agregado de archivo json para los productos junto con la implementación de fetch y otros cambios esteticos

--- a/pages/favoritos.html
+++ b/pages/favoritos.html
@@ -55,7 +55,7 @@
         <div id="favoritos" class="favoritos"></div>
     </main>
 
-    <footer>
+    <footer style="margin-top: 25.75rem;">
         <section class="foot">
             <div class="seguinos">
                 <p>Seguinos en Nuestras Redes</p>
